Fix item parsing and add word wrapping

--- a/src/app/Components/chat-records/chat-records.component.scss
+++ b/src/app/Components/chat-records/chat-records.component.scss
@@ -33,6 +33,7 @@ div.chat-message:hover {
 div.chat-row {
   min-height:32px;
   padding-left: 5px;
+  word-wrap: break-word;
 }
 
 // https://stackoverflow.com/a/36265072
